# neware-sql

./: .gitignore  CHANGELOG.md  README.md  __init__.py  newaresql.py  pyproject.toml  sql.py  transformers.py  writers.py
examples/: get_data.ipynb
src/: new_sql.py  sql.py  transform.py  transformers.py
src/newaresql/: __init__.py  bdf.py  bts.py  connect.py  transform.py
src/newaresql/schemas/: __init__.py  schemas_0760.py  schemas_0800.py
stuff/: sql.py  writers.py
