[project]
name = "neware-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristian Fredrik Klepp Thorbjørnsen", email = "kthorbjornsen@corvusenergy.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pymysql>=1.2.0",
    "sqlalchemy",
]

[project.scripts]
neware-sql = "newaresql:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "newaresql"
